# seren-desktop

./: .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  WEBSOCKET_IMPLEMENTATION.md  biome.json  eslint.config.js  index.html  openapi-ts.config.ts  openapi.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json  settings.local.json
.githooks/: commit-msg
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_configurable_search.md  feature_request.md
.github/release-notes/: v3.72.0.md
.github/scripts/: agent_fix.py
.github/workflows/: agent-fix.yml  build-publisher-sidecars.yml  check-python-version.yml  ci.yml  esigner-cka-preflight.yml  prune-r2-releases.yml  publish-release-manual.yml  release.yml  restore-r2-releases.yml  retry-notarization.yml  test-cka-signing.yml  validation-walkthrough.yml  windows-signing-ledger.yml
docs/: code-signing.md  mcp-integration.md  remote-access-happy-release-audit.md  validation-isolated-launch-audit-prompt.md  validation-isolated-launch.md
docs/adr/: 003-model-budget-registry.md
docs/design/: auto-record-and-search.md
docs/internal/: claude-jsonl-schema.md
docs/plans/: 20260129_Moltbot_Seren.md  20260129_OpenClaw_Seren.md
mcp-servers/playwright-stealth/: README.md  package.json  pnpm-lock.yaml
mockups/claude-codex-workflow/: README.md  index.html  proposal.md
mockups/lmstudio-new-panel/: README.md  index.html
openapi/: openapi-seren-agent.json  openapi-seren-bounty.json  openapi-seren-cloud.json  openapi-seren-db.json  openapi-seren-models.json  openapi-seren-private-models.json  openapi-seren-skills.json  openapi-ts.config.ts  openapi.json
patches/: happy@1.2.0.patch
scripts/: assert-windows-signature-cache.ps1  build-moltbot.sh  build-openclaw.sh  build-openclaw.ts  build-provider-runtime.ts  build-sidecar.sh  build-sidecar.ts  check-commit-msg.sh  create-labels.sh  create-phase1-issues.sh  create-phase2-issues.sh  create-phase3-issues.sh  create-phase4-issues.sh  create-phase5-issues.sh  create-phase6-issues.sh  e2e-local-provider-runtime.mjs  flatten-windows-signables.mjs  mcp-gateway-bridge.cjs  mcp-gateway-bridge.js  prepare-mcp-servers.ts  print-windows-sign-overlay.ts  print-windows-signables.ts  restore-windows-signables.mjs  scan-nsis-placeholders.mjs  setup-claude-env.sh  sign-embedded-runtime.ts  sign-windows-payload.ps1  smoke-local-provider-runtime.mjs  smoke-synthetic-transcript.mjs  stage-signed-nsis-toolset.ps1  test-windows-cargo.ps1  test-windows-signing-monthly-budget-live.ps1  update-sidecar.ts  validate-walkthrough.ts  validation-dev-args.ts  validation-dev.ts  validation-env.ts  validation-slots.ts  verify-frontend-build.mjs  verify-happy-bridge-shutdown.mjs  (+7 more)
scripts/windows-e2e-driver/: package.json  pnpm-lock.yaml
skills/apollo/: SKILL.md
skills/browser-automation/: SKILL.md
skills/getting-started-with-skills/: SKILL.md
skills/job-seeker/: SKILL.md
skills/kraken-grid-trader/: SKILL.md  agent.py  config.example.json  grid_manager.py  seren_client.py
skills/polymarket-trader/: IMPLEMENTATION_STATUS.md  README.md  SKILL.md  agent.py  config.example.json  logger.py  polymarket_client.py  position_tracker.py  requirements.txt  seren_client.py  (+3 more)
src/: App.css  App.tsx  index.tsx  styles.css  vite-env.d.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  Info.plist  build.rs  common-controls-v6.manifest  embedded-runtime-entitlements.plist  entitlements.plist  tauri.conf.json  tauri.validation.conf.json
src-tauri/capabilities/: default.json
src-tauri/embedded-runtime/: .gitkeep
src-tauri/examples/: claude_memory_sync.rs  credential_broker_live.rs
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: acp.rs  approval_continuation.rs  auth.rs  capability_lease.rs  claude_memory.rs  claude_setup.rs  credential_broker.rs  credential_lease.rs  embedded_runtime.rs  files.rs  happy_bridge.rs  lib.rs  main.rs  mcp.rs  moltbot.rs  oauth.rs  oauth_callback_server.rs  openclaw.rs  passwords.rs  path_util.rs  pdf.rs  provider_runtime.rs  sandbox.rs  secret_broker.rs  shell.rs  skills.rs  support.rs  sync.rs  terminal.rs  tool_authorization.rs  tray.rs
src-tauri/src/audio/: apm.rs  chunker.rs  cleanup.rs  detect.rs  lifecycle.rs  llm.rs  merge.rs  mod.rs  notes.rs  pipeline.rs  reconcile.rs  seren_notes_publish.rs  templates.rs  transcribe.rs  types.rs
src-tauri/src/audio/capture/: fake.rs  macos.rs  mic.rs  mod.rs  windows.rs
src-tauri/src/commands/: audio.rs  auth.rs  chat.rs  claude_memory.rs  cli_installer.rs  context_intelligence.rs  conversation_search.rs  credential_lease.rs  employees_archive.rs  gateway_http.rs  happy_bridge.rs  history_sync.rs  indexing.rs  memory.rs  model_context_cache.rs  orchestrator.rs  provider_runtime.rs  recording.rs  sandbox.rs  session.rs  tool_authorization.rs  transcript_search.rs  updater.rs  web.rs
src-tauri/src/messaging/: adapter.rs  commands.rs  discord.rs  formatter.rs  mod.rs  store.rs  telegram.rs  whatsapp.rs
src-tauri/src/orchestrator/: acp_worker.rs  chat_model_worker.rs  classifier.rs  cloud_agent_worker.rs  decomposer.rs  eval.rs  file_access_policy.rs  gateway_envelope.rs  mcp_publisher_worker.rs  mod.rs  provider_worker.rs  rlm.rs  router.rs  service.rs  subtask_context.rs  tool_bridge.rs  tool_relevance.rs  trust.rs  types.rs  worker.rs
src-tauri/src/polymarket/: commands.rs  mod.rs  signing.rs  types.rs  websocket.rs
src-tauri/src/sandbox/: landlock.rs  mod.rs  policy.rs  seatbelt.rs  windows.rs
src-tauri/src/services/: chunker.rs  context_intelligence.rs  conversation_index.rs  database.rs  history_sync.rs  indexer.rs  transcript_vectors.rs  vector_store.rs
src-tauri/src/validation/: control_server.rs  mod.rs
src-tauri/src/wallet/: commands.rs  mod.rs  payment.rs  privatekey.rs  signing.rs  types.rs
src-tauri/tests/: sandbox_landlock.rs  sandbox_seatbelt.rs  sandbox_spec_dispatch.rs  sandbox_windows.rs
(+952 files in other folders)
