[package]
name = "seren-desktop"
version = "0.1.0"
description = "Open source AI-powered desktop IDE with integrated chat, code completion, and MCP integration"
authors = ["SerenAI <hello@serendb.com>"]
edition = "2024"
default-run = "Seren"

# Note: default-run tells Tauri's bundler which binary is the main application.
# This prevents the Windows bundler from targeting the wrong binary.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "Seren"
path = "src/main.rs"

[[bin]]
name = "acp_agent"
path = "src/bin/acp_agent.rs"
required-features = ["acp"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "seren_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
sqlite-vec = "0.1"
notify = "8"
lazy_static = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "io-std", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
jiff = { version = "0.2", features = ["serde"] }
thiserror = "2"
alloy = { version = "1", default-features = false, features = ["signers", "signer-local", "sol-types"] }
hex = "0.4"
rand = "0.9"
base64 = "0.22"
libc = "0.2"
reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "0.14", features = [
    "client",
    "transport-io",                           # stdio for local MCP servers
    "transport-child-process",                # spawn local MCP processes
    "transport-streamable-http-client-reqwest" # SSE for mcp.serendb.com
] }
urlencoding = "2"
regex = "1"
html2md = "0.2"
url = "2"
tiny_http = "0.12"
log = "0.4"
tauri-plugin-log = "2"

# ACP (Agent Client Protocol) support
agent-client-protocol = { version = "0.9", features = ["unstable"], optional = true }
claude-code-acp-rs = { git = "https://github.com/serenorg/claude-code-acp-rs", optional = true }
anyhow = "1"
tokio-tungstenite = { version = "0.24", optional = true }
# Note: codex-acp has unresolved dependency issues (ssh auth for tungstenite fork)
# Will add Codex support when upstream issues are resolved
# codex-acp = { git = "https://github.com/zed-industries/codex-acp" }

# Platform-specific dependencies
# Deep-link plugin excluded on Windows due to WiX bundler ICE03 registry errors
# See: https://github.com/tauri-apps/tauri/issues/10453
[target.'cfg(not(target_os = "windows"))'.dependencies]
tauri-plugin-deep-link = "2"

[features]
default = ["acp", "openclaw"]
acp = ["agent-client-protocol", "claude-code-acp-rs"]
openclaw = ["tokio-tungstenite"]
