[package]
name = "seren-desktop"
version = "0.1.0"
description = "Open source AI-powered desktop IDE with integrated chat, code completion, and MCP integration"
authors = ["SerenAI <hello@serendb.com>"]
edition = "2024"
default-run = "Seren"

# Note: default-run tells Tauri's bundler which binary is the main application.
# This prevents the Windows bundler from targeting the wrong binary.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "Seren"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "seren_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools", "tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
sqlite-vec = "0.1"
notify = "8"
lazy_static = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "io-std", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "v5"] }
portable-pty = "0.9"
termwiz = "0.23"
unicode-width = "0.2"
jiff = { version = "0.2", features = ["serde"] }
thiserror = "2"
alloy = { version = "2", default-features = false, features = ["signers", "signer-local", "sol-types"] }
hex = "0.4"
hmac = "0.12"
rand = "0.10"
rand_distr = "0.6"
sha2 = "0.10"
base64 = "0.22"
libc = "0.2"
reqwest = { version = "0.13", features = ["json", "stream"] }
postgres = { version = "0.19", features = ["with-serde_json-1"] }
postgres-native-tls = "0.5"
native-tls = "0.2"
seren-memory-sdk = { git = "https://github.com/serenorg/seren-memory-sdk.git", branch = "main" }
seren-secrets-crypto = { git = "https://github.com/serenorg/seren-secrets.git", tag = "v0.4.0" }
rmcp = { version = "1.2", features = [
    "client",
    "transport-io",                           # stdio for local MCP servers
    "transport-child-process",                # spawn local MCP processes
    "transport-streamable-http-client-reqwest" # SSE for mcp.serendb.com
] }
urlencoding = "2"
regex = "1"
html2md = "0.2"
url = "2"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
tiny_http = "0.12"
log = "0.4"
tauri-plugin-log = "2"
anyhow = "1"
dirs = "6"
tree-sitter = "0.26.9"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
sonora = "0.1.0"

tokio-tungstenite = { version = "0.30" }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Messaging transport adapters (opt-in via cargo features)
teloxide = { version = "0.14", features = ["macros"], optional = true }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend"], optional = true }
whatsapp-rust = { version = "0.6", default-features = false, features = ["tokio-transport", "tokio-runtime", "ureq-client", "signal"], optional = true }
wacore = { version = "0.6", default-features = false, optional = true }


# Platform-specific dependencies
# Deep-link plugin excluded on Windows due to WiX bundler ICE03 registry errors
# See: https://github.com/tauri-apps/tauri/issues/10453
[target.'cfg(not(target_os = "windows"))'.dependencies]
tauri-plugin-deep-link = "2"

# Single-instance plugin — desktop-only (does not support mobile targets).
# Prevents a second `pnpm tauri dev` (or a second launch of the built app)
# from spawning a parallel process tree that races the first instance's
# ProviderRuntimeState and oauth_callback_server. Resolves #1519.
[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
tauri-plugin-single-instance = "2"
xcap = "0.9.6"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.5"

# System-audio ("Them") loopback capture for Meeting Mode.
[target.'cfg(target_os = "windows")'.dependencies]
cpal = "0.18.1"
wasapi = "0.15"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

# System-audio ("Them") process-tap capture for Meeting Mode (CoreAudio + ObjC FFI).
[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
cpal = "0.18.1"
objc2 = "0.6"
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }
objc2-core-graphics = { version = "0.3", features = ["CGWindow"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSError", "NSValue", "NSUUID"] }
objc2-screen-capture-kit = "0.3.2"
core-foundation = "0.10"
core-graphics = "0.25"

[features]
default = []
validation = []
messaging = []
telegram = ["messaging", "dep:teloxide"]
discord = ["messaging", "dep:serenity"]
whatsapp = ["messaging", "dep:whatsapp-rust", "dep:wacore"]

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tempfile = "3.27.0"
